--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description" : "Website Portofolio",
   "main" : "index.js",
   "scripts" : {
-    "dev" : "npx @tailwindcss/cli -i ./dist/input.css -o ./src/output.css --watch",
-    "build" : "npx @tailwindcss/cli -i ./dist/input.css -o ./src/output.css --minify"
+    "dev" : "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch",
+    "build" : "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --minify"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18"
